DERBY-5042: ResultSet.updateBoolean() on new BOOLEAN type throws exception
git-svn-id: https://svn.apache.org/repos/asf/db/derby/code/trunk@1074127 13f79535-47bb-0310-9956-ffa450edef68